# repoc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
repoc/: __init__.py  auth.py  cli.py  deps_versions.py  github_client.py  models.py  osv.py  scoring.py  utils.py
repoc/analyzers/: __init__.py  coverage.py  dependencies.py  documentation.py  framework.py  language.py  maintenance.py  project_type.py  security.py  vulnerabilities.py
repoc/renderers/: __init__.py  json.py  markdown.py  sarif.py  terminal.py
repoc/rules/: __init__.py  common.py  docker_rules.py  github_actions_rules.py  javascript_rules.py  masking.py  php_rules.py  python_rules.py  ruby_rules.py  shell_rules.py
tests/: conftest.py  test_auth.py  test_cli_gate.py  test_coverage.py  test_dependencies_osv.py  test_framework_detection.py  test_github_tarball.py  test_language_detection.py  test_maintenance.py  test_masking.py  test_path_context.py  test_php_rules.py  test_renderers.py  test_rule_upgrades.py  test_sarif.py  test_scoring.py  test_security_rules.py
