[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repoc"
dynamic = ["version"]
description = "repo + doctor: inspect a GitHub or local repository for trust, stack, and security signals before you clone, fork, install, or contribute."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Yves Guillaume", email = "guillaume.yves@icloud.com" },
]
keywords = ["security", "audit", "github", "repository", "cli", "static-analysis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
repoc = "repoc.cli:app"

[project.urls]
Homepage = "https://github.com/GuillaumeYves/repoc"
Issues = "https://github.com/GuillaumeYves/repoc/issues"

[tool.hatch.version]
path = "repoc/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["repoc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# B008: Typer relies on Option/Argument as defaults; this is the idiomatic pattern.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
